sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:10: error: not found: value x
      x = getValue(i);
      ^AlgBubbleSort1:11: error: not found: value y
      y = getValue(i+1);
      ^